--- a/write.html
+++ b/write.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <form action="/add" method="post">
+        <form id='addForm' action="/add" method="post">
             <div class="textArea">
                 <div class="to">
                     <span class="box">TO</span>
@@ -21,7 +21,7 @@
                 <textarea name="message" id="message" cols="30" rows="10" placeholder="메세지를 입력하세요."></textarea>
                 <div class="password">
                     <span class="box">password</span>
-                    <input type="text" placeholder="****" name="password">
+                    <input type="password" id = 'password' placeholder="****" name="password" maxlength="4">
                 </div>
             </div>
             <button type="submit" class="btn">보내기</button>
@@ -31,5 +31,11 @@
 
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+    <script>
+        document.querySelector('.btn').addEventListener('click', function(){
+            location.href = '/list';
+        })
+    </script>
 </body>
 </html>
