--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h4>안녕하세요 홈페이지입니다.</h4>
+    <h4>맵시 아카이브 메인 화면(꾸며줘엉엉)</h4>
   </body>
 </html>
